--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -57,7 +57,6 @@ include ( Functions/relativeInstall )
 if    ( NOT SCAI_COMPLETE_BUILD )
     include ( SetBuildFlags )
     include ( Compiler/VersionCheck )
-    include ( SCAIAssert )
     include ( Compiler/SetCPPFlags )
 else  ( NOT SCAI_COMPLETE_BUILD )
     include ( Functions/CheckValueAtCompleteBuild )
@@ -129,7 +128,11 @@ scai_project (
 ## add subdirectories
 add_subdirectory ( criteria )
 add_subdirectory ( doc )
+
+if    ( BUILD_EXAMPLES )
 add_subdirectory ( examples )
+endif ( BUILD_EXAMPLES )
+
 add_subdirectory ( logger )
 
 if ( FOUND_BOOST_TEST AND BUILD_TEST )
