--- a/CMake/Tests/MIC/CMakeLists.txt
+++ b/CMake/Tests/MIC/CMakeLists.txt
@@ -35,7 +35,10 @@ cmake_minimum_required (VERSION 2.8 )
 
 project( MICExample )
 
+find_package( OpenMP )
+
+set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+
 # make sure that the default is a RELEASE
 
 add_executable( example example.cpp )
-
