--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -35,6 +35,7 @@ set ( CXX_SOURCES
 	  bindFunctionTest.cpp
       commonTest.cpp
       ComplexTest.cpp
+      ConstantsTest.cpp
       ContextTypeTest.cpp
       FactoryTest.cpp  
       Factory1Test.cpp  
