--- a/scai/dmemo/test/code_coverage.sh.in
+++ b/scai/dmemo/test/code_coverage.sh.in
@@ -32,7 +32,7 @@
 #  @since 1.0.0
 #
 
-#!/bin/bash
+#!/bin/bash -e
 
 source scai_code_coverage_functions.sh
 
@@ -66,7 +66,6 @@ then
             error_count=$(($error_count + $?))
         fi
     done
-    cd ..
 fi
     
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
