--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -48,6 +48,7 @@ set ( CXX_SOURCES
       ThreadTest  
       TypeConversionTest
       TypeListTest
+      TypeLoopTest
       TypeTraitsTest  
       ScalarTypeTest  
       SettingsTest  
