--- a/scai/examples_make.inc.in
+++ b/scai/examples_make.inc.in
@@ -43,7 +43,7 @@ CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
 SCAI_DEFINES=${SCAI_DEFINES}
 
 ADDITIONAL_EXAMPLE_LINK_LIBRARIES=${ADDITIONAL_EXAMPLE_LINK_LIBRARIES}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${SCAI_EXAMPLE_LINK_LIBRARIES}
+SCAI_LD_FLAGS=-L${CMAKE_INSTALL_PREFIX}/lib ${SCAI_EXAMPLE_LINK_LIBRARIES}
 
 SCAI_CUDA_LIBRARY_PATH=${SCAI_CUDA_LIBRARY_PATH}
 
