--- a/scai/lama/test/distributed/CMakeLists.txt
+++ b/scai/lama/test/distributed/CMakeLists.txt
@@ -90,5 +90,5 @@ add_executable ( lamaDistTest lama_dist_test.cpp ${CXX_SOURCES} )
 if ( WIN32 )
     target_link_libraries ( lamaDistTest ${PROJECT_NAME} )
 else ( WIN32 )
-    target_link_libraries ( lamaDistTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lamaDistTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} )
 endif ( WIN32 )
