do not build distributed solver tests without mpi or gpi

--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -31,7 +31,9 @@
  # @since 2.0.0
 ###
 
-add_subdirectory( distributed )
+if    ( MPI_ENABLED OR GPI_ENABLED )
+    add_subdirectory( distributed )
+endif ( MPI_ENABLED OR GPI_ENABLED )
 
 scai_project ( 
 
