--- a/scai/blaskernel/test/code_coverageThird.sh.in
+++ b/scai/blaskernel/test/code_coverageThird.sh.in
@@ -34,73 +34,16 @@
 
 #!/bin/bash -e
 
-function create_dir
-{
-	# Creating dir using current unix timestamp
-	local dirname=coverage_$(date +%s)
-	mkdir ${dirname}
-	echo "${dirname}"
-}
+source scai_code_coverage_functions.sh
 
-# search for newest coverage_dir
-function find_dir
-{
-	local dirs=($(ls -d coverage_*))
+dirname=$(find_dir)
+echo "Found coverage directory: ${dirname}"
 
-	biggest=0
-	for _dir in ${dirs[@]}; do
-		my_val=$(echo "${_dir}" | cut -d'_' -f2)
-		if [ ${my_val} -ge ${biggest} ]; then
-			biggest=${my_val}
-		fi
-	done
-	echo "coverage_${biggest}"
-}
+do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
-# $1: code coveage dirname $2: base coverage dir
-function prepare_coverage
-{
-	# Clearing up environment
-	cd $1
-	lcov --base-directory $2 --directory $2 --zerocounters
-	cd -
-}
+if [ $? == 1 ];
+then
+    exit 1
+fi
 
-# $1: code coveage dirname $2: base coverage dir $3: current source dir
-function do_coverage
-{
-	cd $1
-
-	local error_count=0
-
-	#Running lcov and creating data
-	lcov --base-directory $2 --directory $2 --capture --output-file=data.info
-	if [ $? -ne 0 ]
-	then
-		echo "ERROR in running lcov"
-		error_count=$(($error_count + $?))
-	fi
-
-	#Extracting just Sourcefiles
-	lcov --extract data.info "$3/*" --output-file=data.info
-	if [ $? -ne 0 ]
-	then
-		echo "ERROR in extracting lcov data"
-		error_count=$(($error_count + $?))
-	fi
-
-	# Generating html-structure
-	genhtml data.info
-	if [ $? -ne 0 ]
-	then
-		echo "ERROR in generating html-structure"
-		error_count=$(($error_count + $?))
-	fi
-
-	if [[ $error_count != 0 ]]
-	then
-	    exit 1
-	fi
-
-	cd -
-}
+zip -qr ../blaskernel_coverage.zip *
