--- a/scai/sparsekernel/test/code_coverageFirst.sh.in
+++ b/scai/sparsekernel/test/code_coverageFirst.sh.in
@@ -34,26 +34,9 @@
 
 #!/bin/bash -e
 
-export SCAI_LOG=TRACE
-export SCAI_TRACE=time
+source scai_code_coverage_functions.sh
 
-# Running blaskernel serial
-echo "Running serial tests"
-./blaskernelTest >/dev/null
-if [ $? -ne 0 ]
-then
-	echo "ERROR in blaskernelTest"
-	error_count=$(($error_count + $?))
-fi
+dirname=$(create_dir)
+echo "Create coverage directory: ${dirname}"
 
-#if [ -d ../cuda ];
-#then
-    #Running common CUDA tests
-    echo "Running blaskernel tests with CUDA context"
-    ./blaskernelTest --SCAI_CONTEXT=CUDA >/dev/null
-    if [ $? -ne 0 ]
-    then
-        echo "ERROR in blaskernelTest with CUDA context"
-        error_count=$(($error_count + $?))
-    fi
-#fi
+prepare_coverage $dirname ../..
