added test context for cc in blaskernel

--- a/scai/blaskernel/test/code_coverageSecond.sh.in
+++ b/scai/blaskernel/test/code_coverageSecond.sh.in
@@ -39,7 +39,7 @@ export SCAI_TRACE=time
 
 # Running blaskernel serial
 echo "Running serial tests"
-./blaskernelTest >/dev/null
+./blaskernelTest --SCAI_CONTEXT=Host >/dev/null
 if [ $? -ne 0 ]
 then
 	echo "ERROR in blaskernelTest"
