add dep for dynamic lib in example

--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -38,11 +38,13 @@ if    ( NOT CXX_SUPPORTS_C11 )
     include_directories ( ${BOOST_INCLUDE_DIR} )
 endif ( NOT CXX_SUPPORTS_C11 )
 
-# example of a library module ( will be used by executable UseModule )
-add_library( Module SHARED Module.cpp )
-set ( EXAMPLE_FILES ${EXAMPLE_FILES} Module.cpp )
-set ( EXAMPLE_FILES ${EXAMPLE_FILES} DynRoutine.hpp )
-target_link_libraries( Module ${PROJECT_NAME} )
+if ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
+    # example of a library module ( will be used by executable UseModule )
+    add_library( Module SHARED Module.cpp )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} Module.cpp )
+    set ( EXAMPLE_FILES ${EXAMPLE_FILES} DynRoutine.hpp )
+    target_link_libraries( Module ${PROJECT_NAME} )
+endif ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
 
 # example of a library module ( no use of other LAMA stuff )
 add_library( DummyModule SHARED DummyModule.cpp )
