--- a/scai/solver/examples/CMakeLists.txt
+++ b/scai/solver/examples/CMakeLists.txt
@@ -32,7 +32,9 @@
 ###
 
 add_subdirectory ( lecture )
-add_subdirectory ( myJacobi )
+if ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
+    add_subdirectory ( myJacobi )
+endif ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
 add_subdirectory ( solver )
 add_subdirectory ( spy )
 
