Further work on the LAMA IO, first semi-stable version

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -40,10 +40,10 @@ scai_project (
         mmio
         XDRFileStream
         IOUtils
+        FileStream
 
     HEADERS
 
-        BinaryStream
         FileType
 
     ADD_PARENT_SCOPE
