--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -144,13 +144,13 @@ include ( Dependencies/internal )
 
 include ( ExternalProject )
 
-#message ( STATUS "general ${CMAKE_ARGS}" )
+message ( STATUS "general ${CMAKE_ARGS}" )
 
 ## TODO: do in foreach loop
 #foreach ( project ${LAMA_ALL_INTERNAL_DEPS} )
 
 concatCacheArguments ( scai_common "CACHE_ARGS" )
-#message ( STATUS "common CACHE_ARGS ${CACHE_ARGS}" )
+message ( STATUS "common CACHE_ARGS ${CACHE_ARGS}" )
 
 ExternalProject_Add ( scai_common 
         DEPENDS ${SCAI_COMMON_INTERNAL_DEPS}
@@ -234,7 +234,7 @@ ExternalProject_Add ( scai_blaskernel
             )
             
 concatCacheArguments ( scai_utilskernel "CACHE_ARGS" )
-#message ( STATUS "blaskernel CACHE_ARGS ${CACHE_ARGS}" )
+#message ( STATUS "utilskernel CACHE_ARGS ${CACHE_ARGS}" )
 
 ExternalProject_Add ( scai_utilskernel
             DEPENDS ${SCAI_UTILSKERNEL_INTERNAL_DEPS}
@@ -246,7 +246,7 @@ ExternalProject_Add ( scai_utilskernel
             )
             
 concatCacheArguments ( scai_sparsekernel "CACHE_ARGS" )
-#message ( STATUS "blaskernel CACHE_ARGS ${CACHE_ARGS}" )
+#message ( STATUS "sparsekernel CACHE_ARGS ${CACHE_ARGS}" )
 
 ExternalProject_Add ( scai_sparsekernel
             DEPENDS ${SCAI_SPARSEKERNEL_INTERNAL_DEPS}
@@ -258,7 +258,7 @@ ExternalProject_Add ( scai_sparsekernel
             )
 
 concatCacheArguments ( scai_dmemo "CACHE_ARGS" )
-#message ( STATUS "dmemo CACHE_ARGS ${CACHE_ARGS}" )
+message ( STATUS "dmemo CACHE_ARGS ${CACHE_ARGS}" )
 
 ExternalProject_Add ( scai_dmemo
             DEPENDS ${SCAI_DMEMO_INTERNAL_DEPS}
