--- a/scai/doc/sphinx/conf.py.in
+++ b/scai/doc/sphinx/conf.py.in
@@ -38,7 +38,7 @@ copyright = u'2009-${LAMA_COPYRIGHT_YEAR} Fraunhofer Institute for Algorithms an
 # The short X.Y version.
 version = '0.1'
 # The full version, including alpha/beta/rc tags.
-release = '${LAMA_VERSION} (${LAMA_VERSION_NAME})'
+release = '${SCAI_LAMA_ALL_VERSION} (${SCAI_VERSION_NAME})'
 
 # The name of the Pygments (syntax highlighting) style to use.
 pygments_style = 'tango'
