--- a/scai/sparsekernel/test/code_coverageThird.sh.in
+++ b/scai/sparsekernel/test/code_coverageThird.sh.in
@@ -35,6 +35,9 @@ source scai_code_coverage_functions.sh
 dirname=$(find_dir)
 echo "Found coverage directory: ${dirname}"
 
+# problem with these, so first ignore
+rm sparsekernelTest.gcno sparsekernelTest.gcda
+
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 if [ $? == 1 ];
