--- a/scai/blaskernel/test/code_coverageThird.sh.in
+++ b/scai/blaskernel/test/code_coverageThird.sh.in
@@ -36,7 +36,7 @@ dirname=$(find_dir)
 echo "Found coverage directory: ${dirname}"
 
 # problem with these, so first ignore
-rm LAPACKTest.gcno LAPACKTest.gcda
+rm LAPACKTest.cpp.gcno LAPACKTest.cpp.gcda
 
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
