add switch for toggling USE_COMPLEX

--- a/CMake/Tests/Lib/CMakeLists.txt
+++ b/CMake/Tests/Lib/CMakeLists.txt
@@ -43,9 +43,7 @@ project ( LibTest CXX )
 
 # default is building shared libraries, might be changed
 
-set (BUILD_SHARED_LIBS ON CACHE BOOL
-
-    "Build shared libraries instead of static ones.")
+set ( BUILD_SHARED_LIBS ON CACHE BOOL "Build shared libraries instead of static ones." )
 
 if ( BUILD_SHARED_LIBS )
 
@@ -64,4 +62,3 @@ add_library( rectangle ${LIBRARY_MODE} Rectangle.cpp Rectangle.hpp )
 add_executable( example example.cpp )
 
 target_link_libraries( example rectangle )
-
