--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -49,10 +49,16 @@ set ( EXAMPLE_FILES ${EXAMPLE_FILES} DummyModule.cpp )
 
 set ( EXAMPLE_MODULES "Module.so DummyModule.so" ) # for make.inc
 
-foreach ( executable ExceptionDemo CriticalRegion Barrier 
+set ( EXECUTABLE_FILES ExceptionDemo CriticalRegion Barrier 
           DemoFactory DemoFactory1 DemoPointer UseModule TimePrecision 
-          DemoComplex DemoTypeTrait DemoSettings DemoMath DemoFunction 
+          DemoTypeTrait DemoSettings DemoMath DemoFunction 
           DemoMetaProgramming BenchPointers BenchMath )
+
+if    ( ${USE_COMPLEX} )
+    set ( EXECUTABLE_FILES ${EXECUTABLE_FILES} DemoComplex )
+endif ( ${USE_COMPLEX} )
+
+foreach ( executable ${EXECUTABLE_FILES} )
     add_executable ( ${executable}.exe ${executable}.cpp )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
     target_link_libraries ( ${executable}.exe ${PROJECT_NAME} )
