--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -28,10 +28,9 @@
 ###
 
 set ( CXX_SOURCES
-	  atomicOpenMPTest
-	  bindFunctionTest
+	    atomicOpenMPTest
+	    bindFunctionTest
       commonTest
-      ComplexTest
       ConstantsTest
       ContextTypeTest
       FactoryTest  
@@ -43,7 +42,6 @@ set ( CXX_SOURCES
       PrintableTest
       ReductionOpTest  
       ThreadTest  
-      TypeConversionTest
       TypeListTest
       TypeLoopTest
       TypeTraitsTest  
@@ -51,6 +49,10 @@ set ( CXX_SOURCES
       SettingsTest  
       WalltimeTest  
 )
+
+if    ( ${USE_COMPLEX} )
+    set ( CXX_SOURCES ${CXX_SOURCES} ComplexTest TypeConversionTest )
+endif ( ${USE_COMPLEX} )
 
 include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
 
@@ -73,4 +75,3 @@ if ( USE_CODE_COVERAGE )
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
     configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/../../scai_code_coverage_functions.sh" "${CMAKE_CURRENT_BINARY_DIR}/" @ONLY)
 endif ( USE_CODE_COVERAGE )
-
