added flexible instantiation list --> detect wheter USE_COMPLEX or not, generates SCAITypes.hpp

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ doc/doxygen
 scai/doc/user/conf.py
 scai/logging/doc/user/conf.py
 scai/lama/solver/amg
+scai/common/SCAITypes.hpp
 res/testfiles/*.tmp.*
 .*.swp
 *.*~
