Moved enum ReductionOp from common to utilskernel; Added macro for counting variadic macro arguments

--- a/scai/common/SCAITypes.hpp.in
+++ b/scai/common/SCAITypes.hpp.in
@@ -96,46 +96,35 @@ MIC_CALLABLE_MEMBER extern const PartitionId nPartition;
 /*
  * Kernel
  */
-#define SCAI_ARITHMETIC_HOST_CNT ${NUM_ALL_HOST_TYPES}
+
 #define SCAI_ARITHMETIC_HOST     ${ALL_HOST_TYPES}
-
-#define SCAI_ARITHMETIC_EXT_HOST_CNT ${NUM_EXT_HOST_TYPES}
 #define SCAI_ARITHMETIC_EXT_HOST ${EXT_HOST_TYPES}
-
-#define SCAI_ARITHMETIC_CUDA_CNT ${NUM_CUDA_TYPES}
 #define SCAI_ARITHMETIC_CUDA     ${CUDA_TYPES}
-
-#define SCAI_ARITHMETIC_MIC_CNT ${NUM_MIC_TYPES}
-#define SCAI_ARITHMETIC_MIC     ${MIC_TYPES}
+#define SCAI_ARITHMETIC_MIC      ${MIC_TYPES}
 
 /*
  * Array
  */
-#define SCAI_ARITHMETIC_ARRAY_HOST_CNT ${NUM_ALL_HOST_ARRAY_TYPES}
+
 #define SCAI_ARITHMETIC_ARRAY_HOST     IndexType, SCAI_ARITHMETIC_HOST
-
-#define SCAI_ARITHMETIC_ARRAY_EXT_HOST_CNT ${NUM_EXT_HOST_ARRAY_TYPES}
 #define SCAI_ARITHMETIC_ARRAY_EXT_HOST IndexType, SCAI_ARITHMETIC_EXT_HOST
-
-#define SCAI_ARITHMETIC_ARRAY_CUDA_CNT ${NUM_CUDA_ARRAY_TYPES}
 #define SCAI_ARITHMETIC_ARRAY_CUDA     IndexType, SCAI_ARITHMETIC_CUDA
-
-#define SCAI_ARITHMETIC_ARRAY_MIC_CNT ${NUM_MIC_ARRAY_TYPES}
 #define SCAI_ARITHMETIC_ARRAY_MIC      IndexType, SCAI_ARITHMETIC_MIC
 
 /*
  * List creation
  */
-#define SCAI_ARITHMETIC_HOST_LIST TYPELIST(     SCAI_ARITHMETIC_HOST_CNT,     SCAI_ARITHMETIC_HOST )
-#define SCAI_ARITHMETIC_EXT_HOST_LIST TYPELIST( SCAI_ARITHMETIC_EXT_HOST_CNT, SCAI_ARITHMETIC_EXT_HOST )
-#define SCAI_ARITHMETIC_CUDA_LIST TYPELIST(     SCAI_ARITHMETIC_CUDA_CNT,     SCAI_ARITHMETIC_CUDA )
-#define SCAI_ARITHMETIC_MIC_LIST TYPELIST(      SCAI_ARITHMETIC_MIC_CNT,      SCAI_ARITHMETIC_MIC )
 
-#define SCAI_ARITHMETIC_ARRAY_HOST_LIST TYPELIST( SCAI_ARITHMETIC_ARRAY_HOST_CNT, SCAI_ARITHMETIC_ARRAY_HOST )
-#define SCAI_ARITHMETIC_ARRAY_EXT_HOST_LIST TYPELIST( SCAI_ARITHMETIC_ARRAY_EXT_HOST_CNT, SCAI_ARITHMETIC_ARRAY_EXT_HOST )
-#define SCAI_ARITHMETIC_ARRAY_CUDA_LIST TYPELIST( SCAI_ARITHMETIC_ARRAY_CUDA_CNT, SCAI_ARITHMETIC_ARRAY_CUDA )
-#define SCAI_ARITHMETIC_ARRAY_MIC_LIST TYPELIST( SCAI_ARITHMETIC_ARRAY_MIC_CNT, SCAI_ARITHMETIC_ARRAY_MIC )
+#define SCAI_ARITHMETIC_HOST_LIST           SCAI_TYPELIST( SCAI_ARITHMETIC_HOST )
+#define SCAI_ARITHMETIC_EXT_HOST_LIST       SCAI_TYPELIST( SCAI_ARITHMETIC_EXT_HOST )
+#define SCAI_ARITHMETIC_CUDA_LIST           SCAI_TYPELIST( SCAI_ARITHMETIC_CUDA )
+#define SCAI_ARITHMETIC_MIC_LIST            SCAI_TYPELIST( SCAI_ARITHMETIC_MIC )
 
-/** Number of supported types used in REPEAT macros */
+#define SCAI_ARITHMETIC_ARRAY_HOST_LIST     SCAI_TYPELIST( SCAI_ARITHMETIC_ARRAY_HOST )
+#define SCAI_ARITHMETIC_ARRAY_EXT_HOST_LIST SCAI_TYPELIST( SCAI_ARITHMETIC_ARRAY_EXT_HOST )
+#define SCAI_ARITHMETIC_ARRAY_CUDA_LIST     SCAI_TYPELIST( SCAI_ARITHMETIC_ARRAY_CUDA )
+#define SCAI_ARITHMETIC_ARRAY_MIC_LIST      SCAI_TYPELIST( SCAI_ARITHMETIC_ARRAY_MIC )
+
+/** Representation type for Scalar must be the one with highest precision */
 
 typedef ${SCAI_SCALAR_REP_TYPE} ScalarRepType;
